# FlameDate

./: .gitignore  CMakeLists.txt  FlameDate.sln  README.md
FlameDate/: FlameDate.cpp  FlameDate.h  FlameDate.ui  FlameDate.vcxproj  FlameDate.vcxproj.filters  FlameDate1.ui  GeneralParam.cpp  GeneralParam.h  GeneralParam.ui  ProcessObject.cpp  ProcessObject.h  TEST.xlsx  TelegramJacket.cpp  TelegramJacket.h  config.txt  fullxml.xml  main.cpp  resource.h  token.txt  tree.txt  Лист Microsoft Excel (2)
FlameDate/FlameDate (Linux - CMakeLists - GUI)/FlameDate/: CMakeLists.txt  build.sh
FlameDate/FlameDate (Linux - CMakeLists - GUI)/FlameDate/source/: FlameDate.cpp  FlameDate.h  GeneralParam.h  ProcessObject.cpp  ProcessObject.h  TelegramJacket.cpp  main.cpp  ui_GeneralSetting.h  ui_ParamSmpt.h
FlameDate/FlameDate (Linux - CMakeLists - Terminal)/: CMakeLists.txt  build.sh
FlameDate/FlameDate (Linux - CMakeLists - Terminal)/source/: FlameDate.cpp  FlameDate.h  GeneralParam.h  ProcessObject.cpp  ProcessObject.h  TelegramJacket.h
source/: FlameDate.cpp  FlameDate.h  FlameDate.qrc  GeneralParam.cpp  GeneralParam.h  GeneralParam.ui  ProcessObject.cpp  ProcessObject.h  TelegramJacket.h  ui_FlameDate.h  ui_GeneralParam.h
